<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="DEBUG">true</string>

    <string name="app_name">Bill Calculator</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_clear">Clear</string>
    <string name="msg_billInfoCleared">Bill information cleared</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_background">Background</string>
    
    <string name="action_about">About</string>
    <string name="msg_about"><font size="-1">Bill calculator is an easy-to-use tip calculator for per person bill.\n\n<center>Android Production\nXC Inc.\nCopyrighted @ July, 2014</center></font></string>
    
    <string name="xml_subTotal">SubTotal: $</string>
    <string name="xml_total">Total</string>
    <string name="xml_tax">Tax: </string>
    <string name="xml_incTaxForTip">Include tax for tip calculation</string>
    <string name="xml_$0">$0.00</string>
    <string name="xml_tip0">10% Tip:</string>
    <string name="xml_tip1">15% Tip:</string>
    <string name="xml_tip2">20% Tip:</string>
    <string name="xml_tip3">25% Tip:</string>
    <string name="xml_tipCustom">%:</string>
    <string name="xml_tipCustomValue">17</string>
    <string name="xml_persons">Persons:</string>
    <string name="xml_1">1</string>
    <string name="xml_plus">+</string>
    <string name="xml_minus">-</string>
    <string name="xml_billPerPerson">Bill Per Person:</string>
       
    <!-- For data storage of MainActivity -->
    <string name="KEY_SubTotal">BirthdayCaculator_SubTotal</string>
    <string name="KEY_IncTaxForTip">BirthdayCaculator_IncTaxForTip</string>
    <string name="KEY_TipChoice">BirthdayCaculator_TipChoice</string>
    <string name="KEY_TipCustom">BirthdayCaculator_TipCustom</string>
    <string name="KEY_Persons">BirthdayCaculator_Persons</string>

    <!-- For data storage of SettingActivity -->
    <string name="KEY_INIT">BirthdayCaculator_Initialized</string>
    <string name="KEY_TAXRATE">BirthdayCaculator_TaxRate</string>
    <string name="KEY_TipRate0">BirthdayCaculator_TipRate0</string>
    <string name="KEY_TipRate1">BirthdayCaculator_TipRate1</string>
    <string name="KEY_TipRate2">BirthdayCaculator_TipRate2</string>
    <string name="KEY_TipRate3">BirthdayCaculator_TipRate3</string>
    <string name="KEY_TipRateCustom">BirthdayCaculator_TipRateCustom</string>
    
    <!-- For activity_settings.xml -->
    <string name="xml_tax_rate">Tax Rate: </string>
    <string name="xml_txt_default_tax_rate">Default Tip Rate: </string>
    <string name="xml_default_tax_rate">4.712</string>
    <string name="xml_percent">%</string>
    <string name="xml_save">Save</string>
    
    <string name="xml_1st_tip">1.</string>
    <string name="xml_2nd_tip">2.</string>
    <string name="xml_3rd_tip">3.</string>
    <string name="xml_4th_tip">4.</string>
    <string name="xml_custom_tip">Custom.</string>
    
    <string name="reset">Reset</string>
    <string name="msg_settingReset">Settings are reset to default</string>
</resources>
